# advent-of-code-rust

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests_macos.yml  tests_ubuntu.yml  tests_windows.yml  validations.yml
crates/aoc-geometry/: Cargo.toml
crates/aoc-geometry/src/: bounding_box.rs  cardinal_direction_2d.rs  coordinate_value.rs  direction.rs  direction_2d.rs  grid2d.rs  grid_2d.rs  hypercube.rs  lib.rs  line.rs  orthogonal_line.rs  orthogonal_polygon_2d.rs  point.rs  point_coordinate.rs  vector.rs  vector_coordinate.rs
crates/aoc-graphs/: Cargo.toml
crates/aoc-intervals/: Cargo.toml
crates/aoc-intervals/src/: interval.rs  interval_set.rs  interval_value.rs  lib.rs
crates/aoc-utils/: Cargo.toml
crates/aoc-utils/src/: cache.rs  cli_utils.rs  lib.rs  path_utils.rs  string_utils.rs
docs/: CONTRIBUTING.md  FAQ.md  HOW_TO_USE.md  SETUP_DEV_ENVIRONMENT.md
puzzles/2017/01/: Cargo.toml
puzzles/2018/01/: Cargo.toml
puzzles/2019/01/: Cargo.toml
puzzles/2020/01/: Cargo.toml
puzzles/2021/01/: Cargo.toml  README.md
puzzles/2021/02/: Cargo.toml  README.md
puzzles/2021/02/src/: lib.rs
puzzles/2021/02/tests/: aoc_2021_02_tests.rs
puzzles/2021/03/: Cargo.toml  README.md  SOLUTION.md
puzzles/2021/03/data/solutions/: solution_part1.txt  solution_part2.txt
puzzles/2021/03/src/: lib.rs
puzzles/2021/03/tests/: aoc_2021_03_tests.rs
puzzles/2021/04/: Cargo.toml  README.md
puzzles/2021/05/: Cargo.toml  README.md
puzzles/2022/01/: Cargo.toml  README.md
puzzles/2022/02/: Cargo.toml  README.md
puzzles/2022/03/: Cargo.toml  README.md
puzzles/2022/04/: Cargo.toml  README.md
puzzles/2022/05/: Cargo.toml  README.md
puzzles/2022/06/: Cargo.toml  README.md
puzzles/2022/07/: Cargo.toml  README.md
puzzles/2022/08/: Cargo.toml  README.md
puzzles/2022/09/: Cargo.toml  README.md
puzzles/2022/10/: Cargo.toml  README.md
puzzles/2022/11/: Cargo.toml  README.md  SOLUTION.md
puzzles/2022/12/: Cargo.toml  README.md
puzzles/2022/13/: Cargo.toml  README.md
puzzles/2022/13/src/: lib.rs  packet.rs
puzzles/2022/13/tests/: aoc_2022_13_tests.rs
puzzles/2022/14/: Cargo.toml  README.md
puzzles/2022/15/: Cargo.toml  README.md
puzzles/2022/15/data/solutions/: solution_part1.txt  solution_part2.txt
puzzles/2022/15/src/: lib.rs  sensor_info.rs
puzzles/2022/15/tests/: aoc_2022_15_tests.rs
puzzles/2023/01/: Cargo.toml  README.md
puzzles/2023/02/: Cargo.toml  README.md
puzzles/2023/03/: Cargo.toml  README.md
puzzles/2023/04/: Cargo.toml  README.md
puzzles/2023/05/: Cargo.toml  README.md
puzzles/2023/05/src/: instructions.rs  lib.rs  main.rs  rangemap.rs  rangemap_section.rs
puzzles/2023/05/tests/: solution_tests.rs
puzzles/2023/06/: Cargo.toml  README.md  SOLUTION.md
puzzles/2023/07/: Cargo.toml  (+1 more)
puzzles/2023/15/: Cargo.toml  README.md
puzzles/2023/15/src/: hasher.rs  lens.rs  lib.rs  main.rs
puzzles/2023/15/tests/: aoc_2023_15_tests.rs
tools/aoc-assistant/: Cargo.toml  README.md
(+264 files in other folders)
