[package]
name = "aoc-2021-02"
version = "1.0.0"
edition = "2024"

[dependencies]
include_dir.workspace = true
aoc-utils = { path = "../../../crates/aoc-utils" }
aoc-geometry = { path = "../../../crates/aoc-geometry" }

[dev-dependencies]
pretty_assertions.workspace = true
assertables.workspace = true
