[package]
name = "aoc-2022-13"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "aoc_2022_13_p1"
path = "src/bin/aoc_2022_13_p1.rs"
test = false

[[bin]]
name = "aoc_2022_13_p2"
path = "src/bin/aoc_2022_13_p2.rs"
test = false

[dependencies]
include_dir.workspace = true
serde.workspace = true
serde_json.workspace = true
aoc-utils = { path = "../../../crates/aoc-utils" }

[dev-dependencies]
pretty_assertions.workspace = true
assertables.workspace = true
